--- a/css/style.css
+++ b/css/style.css
@@ -1,29 +1,58 @@
 /* For mobile phones: */
-[class*="col-"] {
-	width: 100%;
-  }
-/* Tablet view */
-@media screen and (min-width: 768px) and (max-width: 1024px) {
-  
-	html{
-		scroll-behavior: smooth;
-	}
-	body, .nav_links #active{
-		font-size: 20px;
-		background-color: none;
-	}
-  }
+@media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
 
 /* Main Body */
-body{
-	background-color: rgb(248, 248, 248);
-	margin:1%;
-	padding:1%;
-	font-size:150%;
+body, #about-back, #home-page, #ghana-back, #bolivia-back, #contact-back  {
+	font-size: 10px;
+	position:relative;
+	font-family: Arial, Helvetica, sans-serif;
+	background: #b3efff;
 }
 
 
 /*Make the h1 heading bigger with a bold font*/
+
+header{
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+	justify-content: space-between;
+}
+
+nav{
+	text-align: center;
+	padding: 10px;
+	width: 100%;
+	background-color: #046b99;
+}
+
+
+nav a{
+	color: #ffe0e0;
+	text-decoration: darkgray;
+}
+
+nav a:hover{
+	font-weight: bold;
+	color: #c7c3c3;
+}
+
+nav li{
+	background: color #5b615b;;
+	padding:10px;
+	width:25%;
+	border:1px solid #ffffff;
+	display: inline-block;
+	width: 20%;
+}
+
+.nav_links #active {
+	font-weight: bolder;
+	color: #fdfdfd;
+	text-decoration: double;
+	border: 4px rgb(36, 36, 36);
+} 
+
 h1{
 	font-size: 2em; 
 	font-weight: bold;
@@ -92,35 +121,85 @@ h2{
 	font-weight: bold;
 }
 
-/*Style headers and paragraphs*/
-
-p, h1, h2 {
+/*Style headers */
+h1, h2 {
 	text-align: center;
     padding: 10px;
 	font-size: 25px;
-}
-
-h1{
 	text-shadow: 3px 3px 1px #ffffff;
 }
 
-header, nav, main, h1, footer{
-	border: 2px solid grey;
-	margin: 10px 0;
+p {
+	font-size: 12px;
+	text-align: center;
+	padding: 20px;
 }
+
+main {
+
+}
+/*Added this so the links stay the same color*/
+a:visited{
+	color:#ffffff
+}
+
+/* Footer */
+footer{
+	position: fixed-bottom;
+	width: 100%;
+	text-align: center;
+	background-color: #046b99;
+}
+
+
+footer p{
+	color: rgb(0, 0, 0);
+	text-align: center;
+}
+
+footer a{
+	color: #000000c7;
+	text-decoration: none;
+}
+}
+
+/* Tablet view */
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+  
+	html{
+		scroll-behavior: smooth;
+	}
+	body, .nav_links #active{
+		font-size: 20px;
+		background-color: none;
+	}
+  
+
+/* Main Body */
+body, #about-back, #home-page, #ghana-back, #bolivia-back, #contact-back  {
+	font-size: 10px;
+	position:relative;
+	font-family: Arial, Helvetica, sans-serif;
+	background: #b3efff;
+}
+
+
+/*Make the h1 heading bigger with a bold font*/
 
 header{
 	display: flex;
 	flex-direction: column;
 	align-items: flex-start;
-	justify-content: space-evenly;
+	justify-content: space-between;
 }
+
 nav{
 	text-align: center;
 	padding: 10px;
 	width: 100%;
-	background-color: #000000;
+	background-color: #046b99;
 }
+
 
 nav a{
 	color: #ffe0e0;
@@ -133,10 +212,10 @@ nav a:hover{
 }
 
 nav li{
-	background-color: #4df3ff;
+	background: color #5b615b;;
 	padding:10px;
 	width:25%;
-	border:1px solid black;
+	border:1px solid #ffffff;
 	display: inline-block;
 	width: 20%;
 }
@@ -148,19 +227,104 @@ nav li{
 	border: 4px rgb(36, 36, 36);
 } 
 
+h1{
+	font-size: 2em; 
+	font-weight: bold;
+}
+
+/*Style the images*/
+img{
+    height: 500px;
+    width: auto;
+	position: center; 
+    padding: 25px;
+    border-radius: 10px;
+    margin: 10px;
+}
+
+#homepage_img {
+	display:block;
+	margin-left:auto;
+	margin-right: auto;
+	width: 50%;
+	position: sticky;
+	top: 0; 
+	background-image: url("../imgs/FIR.JPG");
+	min-height: 500px; 
+	background-attachment: fixed;
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+}
+
+#last_pic {display:block;
+margin-left:auto;
+margin-right: auto;
+width: 50%;
+position: sticky;
+top: 0; 
+background-image: url("../imgs/con.JPG");
+min-height: 500px; 
+background-attachment: fixed;
+background-position: center;
+background-repeat: no-repeat;
+background-size: cover;
+}
 
 
+/* Image Animation */
+.img :hover{
+	color: rgb(211, 232, 250);
+	-webkit-transform: scaleX(-1);
+	transform: scaleX(-1);
+}
+
+/* Links */
+
+a:visited {
+	color: red;
+}
+
+a:hover {
+	text-decoration: underline;
+}
+
+/*Make the h2 heading match h1*/
+h2{
+	font-size: 2em; 
+	font-weight: bold;
+}
+
+/*Style headers */
+h1, h2 {
+	text-align: center;
+    padding: 10px;
+	font-size: 25px;
+	text-shadow: 3px 3px 1px #ffffff;
+}
+
+p {
+	font-size: 12px;
+	text-align: center;
+	padding: 20px;
+}
+
+main {
+
+}
 /*Added this so the links stay the same color*/
 a:visited{
-	color:#0000FF
+	color:#ffffff
 }
 
 /* Footer */
 footer{
 	position: fixed-bottom;
 	width: 100%;
-	background-color: #effaf82d;
+	text-align: center;
+	background-color: #046b99;
 }
+
 
 footer p{
 	color: rgb(0, 0, 0);
@@ -170,4 +334,169 @@ footer p{
 footer a{
 	color: #000000c7;
 	text-decoration: none;
+}
+}
+
+/* Desktop Screens. */
+@media only screen  and (min-width : 1224px) {
+
+/* Main Body */
+body, #about-back, #home-page, #ghana-back, #bolivia-back, #contact-back  {
+	font-size: 10px;
+	position:relative;
+	font-family: Arial, Helvetica, sans-serif;
+	background: #b3efff;
+}
+
+
+/*Make the h1 heading bigger with a bold font*/
+
+header{
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+	justify-content: space-between;
+}
+
+nav{
+	text-align: center;
+	padding: 10px;
+	width: 100%;
+	background-color: #046b99;
+}
+
+
+nav a{
+	color: #ffe0e0;
+	text-decoration: darkgray;
+}
+
+nav a:hover{
+	font-weight: bold;
+	color: #c7c3c3;
+}
+
+nav li{
+	background: color #5b615b;;
+	padding:10px;
+	width:25%;
+	border:1px solid #ffffff;
+	display: inline-block;
+	width: 20%;
+}
+
+.nav_links #active {
+	font-weight: bolder;
+	color: #fdfdfd;
+	text-decoration: double;
+	border: 4px rgb(36, 36, 36);
+} 
+
+h1{
+	font-size: 2em; 
+	font-weight: bold;
+}
+
+/*Style the images*/
+img{
+    height: 500px;
+    width: auto;
+	position: center; 
+    padding: 25px;
+    border-radius: 10px;
+    margin: 10px;
+}
+
+#homepage_img {
+	display:block;
+	margin-left:auto;
+	margin-right: auto;
+	width: 50%;
+	position: sticky;
+	top: 0; 
+	background-image: url("../imgs/FIR.JPG");
+	min-height: 500px; 
+	background-attachment: fixed;
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+}
+
+#last_pic {display:block;
+margin-left:auto;
+margin-right: auto;
+width: 50%;
+position: sticky;
+top: 0; 
+background-image: url("../imgs/con.JPG");
+min-height: 500px; 
+background-attachment: fixed;
+background-position: center;
+background-repeat: no-repeat;
+background-size: cover;
+}
+
+
+/* Image Animation */
+.img :hover{
+	color: rgb(211, 232, 250);
+	-webkit-transform: scaleX(-1);
+	transform: scaleX(-1);
+}
+
+/* Links */
+
+a:visited {
+	color: red;
+}
+
+a:hover {
+	text-decoration: underline;
+}
+
+/*Make the h2 heading match h1*/
+h2{
+	font-size: 2em; 
+	font-weight: bold;
+}
+
+/*Style headers */
+h1, h2 {
+	text-align: center;
+    padding: 10px;
+	font-size: 25px;
+	text-shadow: 3px 3px 1px #ffffff;
+}
+
+p {
+	font-size: 12px;
+	text-align: center;
+	padding: 20px;
+}
+
+main {
+
+}
+/*Added this so the links stay the same color*/
+a:visited{
+	color:#ffffff
+}
+
+/* Footer */
+footer{
+	position: fixed-bottom;
+	width: 100%;
+	text-align: center;
+	background-color: #046b99;
+}
+
+
+footer p{
+	color: rgb(0, 0, 0);
+	text-align: center;
+}
+footer a{
+	color: #000000c7;
+	text-decoration: none;
+}
 }
