--- a/css/style.css
+++ b/css/style.css
@@ -68,7 +68,7 @@ nav li{
 
 ul {
 	display: grid;
-	grid-template-columns: 2fr 1fr 1fr 1fr 2r;
+	grid-template-columns: repeat(auto-fit, minmax(min(0.75rem, 100%), 1fr));
 	grid-gap: 10px;
 	justify-content: space-around;
 	justify-items: center;
@@ -92,7 +92,7 @@ h1{
 	font-weight: bold;
 }
 
-/*Style the images*/
+/*Style the images,  Most of this code were edited and inferred from W3Schools and Hwk*/
 img{
     height: 500px;
     width: auto;
@@ -109,13 +109,13 @@ img{
 
 .imgh {
 	display: block;
-	width: 100%;
+	width: auto;
 	height: auto;
 }
 
 .ghcontainer {
 	display: flex;
-	flex-direction: row;
+	flex-direction: column;
 	flex-wrap: wrap;
 	padding: 0 4px;
 }
@@ -125,7 +125,7 @@ img{
     bottom: 100%;
     left: 0;
     right: 0;
-    background-color: #e9a2e3;
+    background-color: #969696;
     overflow: hidden;
     width: 100%;
     height: 0;
@@ -139,7 +139,7 @@ img{
 
 .txt{
 	white-space: nowrap;
-	color: white;
+	color: black;
 	font-size: 20px;
 	position: absolute;
 	overflow: hidden;
@@ -158,8 +158,8 @@ img{
 .b-img {
 	display:grid;
 	grid-row-gap: 3px;
-	grid-template-columns: 1fr;
-	grid-template-rows: 1fr, auto auto auto auto auto auto;
+	/* grid-template-columns: repeat(auto-fit, minmax(min(0.75rem, 100%), 1fr)); */
+	grid-template-rows: repeat(auto-fit, minmax(min(0.75rem, 100%), 1fr));
 	justify-content: center;
 	align-items: center;
 }
@@ -412,9 +412,7 @@ p {
 	padding: 20px;
 }
 
-main {
 
-}
 /*Added this so the links stay the same color*/
 a:visited{
 	color:#ffffff
